# Pr6_CheatSheet

./: .editorconfig  .gitattributes  .gitignore  CLAUDE.md  README.md  bootstrap.ps1  bootstrap.sh
.claude/: settings.json
.claude/hooks/: verify-backend.sh
_docs/: API.md  ARCHITECTURE.md  DEPENDENCIES.md  TASKS.md  architecture-index.md  desired-workflow.md  repo-structure.md  tech-stack-decision.md
_docs/archive/: TASKS-backend.md  agentic-workflow-improvements.md  recipe-catalog-annotated.md  recipe-catalog.md
_docs/handoffs/: README.md  role-2-wk1-models-recipe-dag.md  role-2-wk2-api-routes.md  role-2-wk2-chained-columns.md  role-2-wk2-queue.md  role-2-wk2-reconcile.md  role-2-wk2-sse.md  role-2-wk2-staleness.md  (+1 more)
backend/: CLAUDE.md  docker-compose.yml  pyproject.toml
backend/app/: main.py
backend/app/agents/: __init__.py
backend/app/api/: deps.py
backend/app/api/routes/: __init__.py  cases.py  cells.py  columns.py  documents.py  health.py  recipes.py  reconcile.py  rows.py  runs.py  sheets.py
backend/app/citations/: __init__.py
backend/app/connectors/: __init__.py  prozorro.py  youcontrol.py
backend/app/core/: config.py
backend/app/dag/: __init__.py  errors.py  graph.py  invariants.py  validation.py
backend/app/db/: base.py  session.py
backend/app/documents/: __init__.py
backend/app/eval/: __init__.py
backend/app/models/: __init__.py  case.py  cell.py  column.py  cross_row.py  document.py  enums.py  recipe.py  row.py  run.py  sheet.py  types.py
backend/app/realtime/: __init__.py  batcher.py  broker.py  events.py  listener.py  routes.py
backend/app/recipes/: __init__.py  base.py  registry.py
backend/app/recipes/cell_producing/: __init__.py
backend/app/recipes/cross_row/: __init__.py
backend/app/recipes/row_producing/: __init__.py  prozorro_lots.py
backend/app/schemas/: __init__.py  case.py  cell.py  column.py  common.py  document.py  grid.py  recipe.py  sheet.py
backend/app/services/: __init__.py  cache_key.py  cell_execution.py  grid_query.py  reconcile.py  row_ingest.py  staleness.py  wavefront.py
backend/app/tasks/: __init__.py  app.py  cells.py
backend/app/tests/: conftest.py  test_cache_key.py  test_chained_columns.py  test_dag_graph.py  test_dag_validation.py  test_health.py  test_invariants.py  test_models_mirror_schema.py  test_prozorro_connector.py  test_queue.py  test_recipe_contract.py  test_reconcile.py  test_routes_grid.py  test_row_ingest.py  test_sse.py  test_staleness.py  test_wavefront.py
backend/scripts/: apply_migrations.py  apply_queue_schema.py  gate_week1.py
frontend/: CLAUDE.md  index.html  package-lock.json  package.json
(+17 files in other folders)
