[project]
name = "cheatsheet-backend"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg",
    "pgvector",             # mirrors chunk.embedding vector(1024) (§10)
    "pydantic-settings",
    "fastapi-users[sqlalchemy]",
    "httpx",                # connectors (§6a)
    "jsonschema",           # server-side output_schema enforcement (§3)
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
    "ruff",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["app/tests"]

[tool.ruff]
line-length = 90
