[project]
name = "cheatsheet-backend"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg",
    "pgvector",             # mirrors chunk.embedding vector(1024) (§10)
    "pydantic-settings",
    "fastapi-users[sqlalchemy]",
    "httpx",                # connectors (§6a)
    "jsonschema",           # server-side output_schema enforcement (§3)
    # the one queue — Postgres LISTEN/NOTIFY + SKIP LOCKED (§4, §15). The extra is
    # not optional: PsycopgConnector runs on psycopg 3, which `procrastinate` alone
    # does not pull, and without it the queue fails at first connect rather than at
    # import. SQLAlchemy stays on asyncpg — two drivers, on purpose.
    # `[binary]` is a prebuilt wheel (no libpq/compiler on a dev laptop); psycopg
    # upstream wants `psycopg[c]` or system libpq for a real deployment.
    "procrastinate[psycopg_binary]",
    "sse-starlette",        # realtime transport (§4 step 7, §15)
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
    "ruff",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["app/tests"]

[tool.ruff]
line-length = 90
